add meyerweb reset, fixed some style bugs

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <span id="antlr4" class="language">antlr4</span>
         <p>a simple example of using an ANTLR4 grammar</p>
         
-        <a href="https://github.com/edaniszewski/haikuweather">haikuweather</a>
+        <a href="http://edaniszewski.github.io/haikuweather/">haikuweather</a>
           <span id="html" class="language">html</span>
           <span id="css" class="language">css</span>
           <span id="javascript" class="language">javascript</span>
