--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
       
       <section id="projects">
         <h1>$ ls /projects</h1>
+
+        <a href="https://github.com/edaniszewski/colorutils">colorutils</a>
+          <span id="python" class="language">python</span>
+        <p>a library which provides utilities for working with colors in python</p>
+
+        <a href="https://github.com/edaniszewski/cmpy">cmpy</a>
+          <span id="python" class="language">python</span>
+        <p>a simple utility for detecting differences in directories and files</p>
         
         <a href="https://github.com/edaniszewski/MultithreadedTCP">multithreaded tcp</a>
           <span id="python" class="language">python</span>
